[gd_scene load_steps=16 format=3 uid="uid://0ywej4fuel7v"]

[ext_resource type="Script" uid="uid://8aei47uogisb" path="res://Main_menu/menu/main_menu.gd" id="1_7u1x5"]
[ext_resource type="Texture2D" uid="uid://c5pwkps3g7i4o" path="res://Main_menu/Image/Main_back.jpg" id="2_88t6w"]
[ext_resource type="Texture2D" uid="uid://dhkxj7r1rulau" path="res://Main_menu/Image/Knight.png" id="3_3g516"]
[ext_resource type="Texture2D" uid="uid://bjb566jhmdff2" path="res://Main_menu/Image/FinalBG.png" id="3_8s76n"]

[sub_resource type="SystemFont" id="SystemFont_3g516"]
font_names = PackedStringArray("Times New Roman")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_88t6w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w7g5f"]

[sub_resource type="SystemFont" id="SystemFont_88t6w"]
font_names = PackedStringArray("Times New Roman")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8s76n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7u1x5"]

[sub_resource type="SystemFont" id="SystemFont_8s76n"]
font_names = PackedStringArray("Times New Roman")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mriae"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3g516"]

[sub_resource type="SystemFont" id="SystemFont_w7g5f"]
font_names = PackedStringArray("Times New Roman")

[sub_resource type="SystemFont" id="SystemFont_7u1x5"]
font_names = PackedStringArray("Times New Roman")

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7u1x5")

[node name="TextureRect2" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_88t6w")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_8s76n")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.956863)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start_Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.420312
anchor_top = 0.472222
anchor_right = 0.589061
anchor_bottom = 0.558333
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_fonts/font = SubResource("SystemFont_3g516")
theme_override_font_sizes/font_size = 22
theme_override_styles/hover = SubResource("StyleBoxEmpty_88t6w")
theme_override_styles/normal = SubResource("StyleBoxEmpty_w7g5f")
text = "Start Game"
metadata/_edit_use_anchors_ = true

[node name="Options_Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.454688
anchor_top = 0.702778
anchor_right = 0.570311
anchor_bottom = 0.788889
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(1, 0.92549, 0.701961, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.92549, 0.701961, 1)
theme_override_fonts/font = SubResource("SystemFont_88t6w")
theme_override_font_sizes/font_size = 17
theme_override_styles/hover = SubResource("StyleBoxEmpty_8s76n")
theme_override_styles/normal = SubResource("StyleBoxEmpty_7u1x5")
text = "Options"
metadata/_edit_use_anchors_ = true

[node name="Exit_Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.440625
anchor_top = 0.913889
anchor_right = 0.562501
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_fonts/font = SubResource("SystemFont_8s76n")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxEmpty_mriae")
theme_override_styles/normal = SubResource("StyleBoxEmpty_3g516")
text = "Exit"
metadata/_edit_use_anchors_ = true

[node name="Game_title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.33125
anchor_top = 0.291667
anchor_right = 0.66875
anchor_bottom = 0.402778
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_w7g5f")
theme_override_font_sizes/font_size = 33
text = "The Silent Vow"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Party_A" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.39375
anchor_top = 0.0305556
anchor_right = 0.609375
anchor_bottom = 0.0944445
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_7u1x5")
theme_override_font_sizes/font_size = 16
text = "Created by Party A"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.464063
anchor_top = 0.597222
anchor_right = 0.58125
anchor_bottom = 0.733334
offset_right = -26.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3g516")
expand_mode = 2
metadata/_edit_use_anchors_ = true
